--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,53 +1,33 @@
-version: "3"
+version: "3.9"
 
 services:
-  backend_blue:
+  backend:
     build: ./backend
     container_name: backend_blue
+    ports:
+      - "3000:3000"
     networks:
-      - proyecto
-    expose:
-      - "3000"
+      - proyecto-net
 
-  backend_green:
-    build: ./backend
-    container_name: backend_green
-    networks:
-      - proyecto
-    expose:
-      - "3000"
-
-  frontend_blue:
+  frontend:
     build: ./frontend
     container_name: frontend_blue
     networks:
-      - proyecto
-    expose:
-      - "80"
-
-  frontend_green:
-    build: ./frontend
-    container_name: frontend_green
-    networks:
-      - proyecto
-    expose:
-      - "80"
+      - proyecto-net
 
   nginx:
     image: nginx:latest
     container_name: nginx_proxy
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./frontend:/usr/share/nginx/html
     ports:
       - "80:80"
     depends_on:
-      - backend_blue
-      - backend_green
-      - frontend_blue
-      - frontend_green
+      - backend
     networks:
-      - proyecto
+      - proyecto-net
 
 networks:
-  proyecto:
+  proyecto-net:
     driver: bridge
