--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,60 @@
 version: "3.9"
 
 services:
-  backend:
-    build: ./backend
+  # --- Servicios BLUE ---
+  backend_blue:
+    # 🚨 CAMBIO: Usar 'image' en lugar de 'build'. La imagen del pipeline incluye el SHA.
+    image: ghcr.io/${GH_REPO}/backend:${IMAGE_TAG} 
     container_name: backend_blue
-    ports:
-      - "3000:3000"
     networks:
       - proyecto-net
+    # El backend escucha internamente en el puerto 3000
+    expose: 
+      - "3000"
 
-  frontend:
-    build: ./frontend
+  frontend_blue:
+    image: ghcr.io/${GH_REPO}/frontend:${IMAGE_TAG}
     container_name: frontend_blue
     networks:
       - proyecto-net
+    # El frontend escucha internamente en el puerto 80 (si usa Nginx interno)
+    expose:
+      - "80" 
 
+  # --- Servicios GREEN ---
+  backend_green:
+    image: ghcr.io/${GH_REPO}/backend:${IMAGE_TAG}
+    container_name: backend_green
+    networks:
+      - proyecto-net
+    expose:
+      - "3000"
+
+  frontend_green:
+    image: ghcr.io/${GH_REPO}/frontend:${IMAGE_TAG}
+    container_name: frontend_green
+    networks:
+      - proyecto-net
+    expose:
+      - "80"
+
+  # --- Proxy Nginx ---
   nginx:
     image: nginx:latest
     container_name: nginx_proxy
+    # 🚨 CAMBIO: Eliminar el volumen './frontend' ya que el frontend es otro contenedor.
     volumes:
+      # Montamos el archivo de configuración que será actualizado por el script
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-      - ./frontend:/usr/share/nginx/html
-    ports:
-      - "8080:80"
+    # Puerto que expone Nginx al exterior del VPS (el puerto 8080 del VPS)
+    ports: 
+      - "8080:80" 
+    # Depende de todos para iniciar la red
     depends_on:
-      - backend
+      - backend_blue
+      - frontend_blue
+      - backend_green
+      - frontend_green
     networks:
       - proyecto-net
 
