--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,9 +9,12 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      # Necesario para subir y descargar de ghcr.io
       contents: read
       packages: write 
+    
+    # 🚨 1. AQUÍ INSERTA LA VARIABLE DE ENTORNO EN MINÚSCULAS 🚨
+    env:
+      REPO_LOWER: ${{ toLower(github.repository) }} 
       
     steps:
       - name: Checkout repo
@@ -22,7 +25,6 @@ jobs:
         with:
           node-version: 18
       
-      # Correr Pruebas (asumiendo que están en la carpeta backend)
       - name: Run tests (Supertest)
         run: |
           cd backend
@@ -36,22 +38,25 @@ jobs:
         with:
           registry: ghcr.io
           username: ${{ github.actor }}
-          # Usar el token por defecto (GITHUB_TOKEN)
           password: ${{ secrets.GITHUB_TOKEN }} 
 
-      - name: Build and Push Docker images
+      # 🚨 2. CONSTRUIR Y SUBIR BACKEND (usando la variable REPO_LOWER) 🚨
+      - name: Build and Push Backend Image
         uses: docker/build-push-action@v4
         with:
-          context: . # Contexto: La raíz del proyecto
+          context: ./backend # Contexto es la carpeta backend
           push: true
-          # Tags para las imágenes de Backend y Frontend
-          tags: |
-            ghcr.io/${{ github.repository }}/backend:${{ github.sha }}
-            ghcr.io/${{ github.repository }}/frontend:${{ github.sha }}
-          # Especificar los Dockerfiles correctos para multi-stage build o multi-servicios
-          file: ./Dockerfile # Asume un solo Dockerfile. Si tienes varios, necesitas múltiples 'build-push-action'
-          # Nota: Si tienes un Dockerfile por carpeta (backend/Dockerfile, frontend/Dockerfile),
-          # necesitarás dos pasos 'Build and Push' distintos, uno para cada servicio.
+          file: ./backend/Dockerfile # Ruta a tu Dockerfile de backend
+          tags: ghcr.io/${{ env.REPO_LOWER }}/backend:${{ github.sha }}
+
+      # 🚨 3. CONSTRUIR Y SUBIR FRONTEND (usando la variable REPO_LOWER) 🚨
+      - name: Build and Push Frontend Image
+        uses: docker/build-push-action@v4
+        with:
+          context: ./frontend # Contexto es la carpeta frontend
+          push: true
+          file: ./frontend/Dockerfile # Ruta a tu Dockerfile de frontend
+          tags: ghcr.io/${{ env.REPO_LOWER }}/frontend:${{ github.sha }}
 
       # --- 🚀 Despliegue a VPS (Blue-Green) ---
       
@@ -64,11 +69,15 @@ jobs:
           script: |
             # Moverse al directorio del proyecto
             cd ~/Proyecto-vps
+
+            # 🚨 4. SINCRONIZACIÓN DE CÓDIGO 🚨
             git pull origin main
+            
+            # Asegurar que el Nginx proxy esté corriendo
             docker compose up -d nginx
 
-            # Exportar variables para el docker-compose.yml
-            export GH_REPO=${{ github.repository }}
+            # 🚨 5. EXPORTAR VARIABLE EN MINÚSCULAS 🚨
+            export GH_REPO=${{ env.REPO_LOWER }}
             export IMAGE_TAG=${{ github.sha }}
             
             # Login en el VPS (necesario para el Pull)
@@ -96,11 +105,10 @@ jobs:
             # 3. Levantar nuevo contenedor (El compose ya tiene las variables)
             docker compose up -d ${NEW_BACKEND} ${NEW_FRONTEND}
             
-            # 4. Esperar la salud del nuevo contenedor (CRÍTICO antes de cambiar el tráfico)
+            # 4. Esperar la salud del nuevo contenedor
             sleep 15
             
-            # 5. 🚨 CRÍTICO: Aplicar la nueva configuración de Nginx (Switch de tráfico)
-            # Copiar el archivo de configuración del nuevo color (blue.conf o green.conf) al default.conf
+            # 5. CRÍTICO: Aplicar la nueva configuración de Nginx (Switch de tráfico)
             cp ~/Proyecto-vps/nginx/${NEW_COLOR}.conf ~/Proyecto-vps/nginx/default.conf
 
             # 6. Actualizar Nginx y recargar
